<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/fullLayout"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/headLayout"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/lightgrey"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titleMovieDB"
                    android:layout_width="318dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="145dp"
                    android:paddingTop="14dp"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    app:srcCompat="@drawable/mdb_logo"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <Button
                android:id="@+id/genres"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:backgroundTint="@color/darkblue"
                android:text="@string/btnGenres"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sectionLayout"
            android:layout_width="match_parent"
            android:layout_height="419dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:paddingRight="20dp"
                android:text="@string/frontSectionText"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/topratedMovieTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/topratedMovie"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:background="@color/lightgrey"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/topratedMovieButton"
                android:layout_width="176dp"
                android:layout_height="264dp"
                android:layout_marginStart="118dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/topratedMovie"
                android:scaleType="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/black_widow"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/footerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lightgrey"
            android:orientation="vertical">

            <TextView
                android:id="@+id/footerStuff"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:paddingTop="12dp"
                android:text="@string/footerStuff" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>